--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,11 @@ description = "Add your description here"
 authors = [
     { name = "toririm", email = "59079411+toririm@users.noreply.github.com" },
 ]
-dependencies = ["numpy>=1.26.4", "matplotlib>=3.9.0"]
+dependencies = [
+    "numpy>=1.26.4",
+    "matplotlib>=3.9.0",
+    "numba>=0.60.0",
+]
 readme = "README.md"
 requires-python = ">= 3.8"
 
