--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -2,12 +2,9 @@
 name = "rust"
 version = "0.1.0"
 edition = "2021"
-build = "build.rs"
 
 [dependencies]
-ndarray = { version = "0.15.6", features = ["blas"] }
-blas-src = { version = "0.8", features = ["openblas"] }
-openblas-src = { version = "0.10", features = ["cblas", "system"] }
+ndarray = { version = "0.15.6" }
 ndarray-linalg = "0.16.0"
 num = "0.4.3"
 plotters = "0.3.6"
